test/performance/vectorization/vectorizeOnly/constChecking/leaderFollowerConstChecking.good
leaderFollowerConstChecking.chpl:7: error: illegal lvalue in assignment
leaderFollowerConstChecking.chpl:8: error: illegal lvalue in assignment
leaderFollowerConstChecking.chpl:17: error: illegal lvalue in assignment
leaderFollowerConstChecking.chpl:22: error: illegal lvalue in assignment
leaderFollowerConstChecking.chpl:28: error: illegal lvalue in assignment
leaderFollowerConstChecking.chpl:33: error: illegal lvalue in assignment
